# TTM-for-for-Renewable-Energy-Systems

./: .gitignore  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md
docs/: DATA_CALIBRATION.md  DATA_SOURCES.md  IMPLEMENTATION_GUIDE.md  MATHEMATICAL_FORMULATIONS.md
plots/: VISUALIZATION_GUIDE.md  visualize.py
src/: lib.rs  main.rs
src/analysis/: convergence.rs  mod.rs  sensitivity.rs
src/models/: lcoe.rs  mod.rs  system.rs  technology.rs
src/solvers/: mod.rs  ode.rs
