[package]
name = "lcoe-dynamics"
version = "0.1.0"
edition = "2021"
authors = ["Dipanta Bhattacharyya"]
description = "Dynamic LCOE and transition time modeling for renewable energy systems"

[dependencies]
nalgebra = "0.33"
ndarray = "0.15"
ndarray-linalg = "0.16"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "lcoe_dynamics"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
